<?xml version="1.0"?>
<package format="2">
  <name>ros_audio_player</name>
  <version>0.1.0</version>
  <description>
  The audio_player package
  </description>

  <maintainer email="michele.tartari@live.com">m-tartari</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>